ペット取得処理を実装
